app/src/main/java/com/example/weatherapp/error/ErrroContract.kt
package com.example.weatherapp.error

interface ErrroContract {

    interface View

    interface Presetner
}